--- a/authoringsrc/items/templates/Project/mymovable01.yml
+++ b/authoringsrc/items/templates/Project/mymovable01.yml
@@ -1,5 +1,5 @@
 ---
 ID: "" # I get to make this value up myself
 Parent: "825b30b4-b40b-422e-9920-23a1b6bda89c" # This value means "/sitecore/templates/Project"
-Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c" # This value means "Template Folder" -- obviously I should also create a "mymovable01" folder alongside this YAML file.
+Template: "0437fee2-44c9-46a6-abe9-28858d9fee8c" # This value means "Template Folder" -- as in, there's a "mymovable01" folder alongside this YAML file with YAML files inside of it that are typed as Template Folder, Template, etc.
 Path: /sitecore/templates/Project/mymovable01
