--- a/authoringsrc/items/templates/Project/myfirstsitecollection/Headless Site.yml
+++ b/authoringsrc/items/templates/Project/myfirstsitecollection/Headless Site.yml
@@ -1,15 +1,16 @@
 ---
 ID: "" # I get to make this value up myself
-Parent: "" # I need to refer to ./authoringsrc/items/templates/Project/mymovable01.yml file's ID
+Parent: "" # I need to refer to ./authoringsrc/items/templates/Project/myfirstsitecollection.yml file's ID
 Template: "ab86861a-6030-46c5-b394-e8f99e8b87db" # This value means "Template."  I probably still need a "Headless Site" folder with a "__Standard Values.yml" file in it, though.
-Path: /sitecore/templates/Project/mymovable01/Headless Tenant
+Path: /sitecore/templates/Project/myfirstsitecollection/Headless Site
 SharedFields:
-- ID: "06d5295c-ed2f-4a54-9bf2-26228d113318" # This whole entry -- its ID, Hint, and Value -- keep showing up in disparate codebases, so I guess we all just love window icons.
+- ID: "06d5295c-ed2f-4a54-9bf2-26228d113318" # This whole entry -- its ID, Hint, and Value -- keep showing up in disparate codebases, so I guess we all just love window star icons.
   Hint: __Icon
-  Value: Office/32x32/window.png
+  Value: Office/32x32/window_star.png
 - ID: "12c33f3f-86c5-43a5-aeb4-5598cec45116" # This whole entry -- its ID, Hint, and Value -- keep showing up in disparate codebases, so it must just be something I need to include.  This GUID seems to be Sitecore-standard and mean the "__Base template" field within a "Template" (ab86861a).
   Hint: __Base template
   Value: |
-    {B91811F1-FA8B-47F8-B131-BD2C6D5EC805}
+    {9ED66404-64C9-4122-90E1-869CB3CEA566}
     {DCB42A80-68C9-46F9-B036-BC44A27D96FE}
+    {448108A3-CEA9-42E3-A86C-2D2BD325870E}
     {3BC304DB-FE8F-4AA8-B95C-8C331E823F4C}
