--- a/authoringsrc/items/whatever/Project.FirstAttempt/items/templates/myfirstsitecollection/Headless Tenant.yml
+++ b/authoringsrc/items/whatever/Project.FirstAttempt/items/templates/myfirstsitecollection/Headless Tenant.yml
@@ -1,6 +1,6 @@
 ---
 ID: "" # I get to make this value up myself
-Parent: "" # I need to refer to ./authoringsrc/items/templates/Project/myfirstsitecollection.yml file's ID
+Parent: "" # I need to refer to .authoringsrc/items/whatever/Project.FirstAttempt/items/templates/myfirstsitecollection.yml file's ID
 Template: "ab86861a-6030-46c5-b394-e8f99e8b87db" # This value means "Template."  I probably still need a "Headless Site" folder with a "__Standard Values.yml" file in it, though.
 Path: /sitecore/templates/Project/myfirstsitecollection/Headless Tenant
 SharedFields:
